--- a/about.html
+++ b/about.html
@@ -146,7 +146,7 @@
 							<div class="blog-img-cover"></div>
 							<div class="blog-info">
 								<div>
-									<h2>Travel Stories</h2>
+									<h2>MEST Announcemnet</h2>
 									<div class="divider"></div>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis justo, finibus ultrices elit et, interdum congue mi. Aliquam suscipit finibus ipsum eu scelerisque.</p>
 									<p class="read-more">Read more</p>
@@ -163,7 +163,7 @@
 							<div class="blog-img-cover"></div>
 							<div class="blog-info">
 								<div>
-									<h2>Travel Stories</h2>
+									<h2>Why Tech</h2>
 									<div class="divider"></div>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis justo, finibus ultrices elit et, interdum congue mi. Aliquam suscipit finibus ipsum eu scelerisque.</p>
 									<p class="read-more">Read more</p>
