--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
 	<div class="clearfloat"></div>
 	<footer>
 		<div class="">
-			<p>Built with <i style="font-style: normal; color: #bc96e6">&#10084;</i> from Sandcity</p>
+			<p>Built with <i style="font-style: normal; color: #bc96e6">&#10084;</i> from SandCity</p>
 		</div>
 	</footer>
 
