Fix blog header

--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
 	</div> -->
 
 	<section class="main-all">
-		<header class="about-bg">
+		<header class="blog-bg">
 			<nav class="">
 				<a href="index.html"><img src="img/sam logo.png" alt="logo" class="logo" /></a>
 				<div class="linker">
