fix header text

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
 							<img src="img/travel.jpeg" alt="" />
 							<div class="blog-info">
 								<div>
-									<h2>Travel Stories</h2>
+									<h2>My Travel Stories</h2>
 									<div class="divider"></div>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis justo, finibus ultrices elit et, interdum congue mi. Aliquam suscipit finibus ipsum eu scelerisque.</p>
 									<p class="read-more">Read more</p>
