--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 			<!-- TOP HEADER AREA -->
 			<section class="about-word">
 				<div class="about-text">
-					<h2>What about me</h2>
+					<h2>My Travel Stroies</h2>
 					<div class="divider divider-middle divider-header"></div>
 				</div>
 			</section>
