--- a/blog.html
+++ b/blog.html
@@ -41,39 +41,24 @@
 			</section>
 		</header>
 
-		<section class="content-area">
+		<section class="blog-area">
 			<div class="con">
-				<div class="sect sector-5">
-					<div class="card-block"></div>
-					<div class="card-block-info">
-						<h2>Self Taught</br>Programmer</h2>
-						<div class="divider divider-inner"></div>
-					</div>
-				</div>
 
-				<div class="sect-info sector-7">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis justo, finibus ultrices elit et, interdum congue mi. Aliquam suscipit finibus ipsum eu scelerisque. Phasellus vehicula dapibus finibus. Nullam bibendum velit quis velit vulputate, vel vestibulum nulla ullamcorper. Maecenas dui erat, malesuada a purus ac, ultrices semper orci. Cras nec bibendum lectus. Sed semper nisl vitae fermentum molestie. Nunc euismod efficitur nisi, ut congue tellus sagittis eget. Maecenas rhoncus tristique convallis. Quisque hendrerit magna eget eros elementum malesuada.</p>
+				<div class="sect-info sector-12">
+					<p class="blog-extract">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis justo, finibus ultrices elit et, interdum congue mi. Aliquam suscipit finibus ipsum eu scelerisque. Phasellus vehicula dapibus finibus. Nullam bibendum velit quis velit vulputate, vel vestibulum nulla ullamcorper. </p>
 				</div>
 			</div>
 		</section>
 		<div class="clearfloat"></div>
 
-		<section class="content-area">
+		<section class="blog-area">
 			<div class="con">
-				<div class="sect-info sector-7">
+				<div class="sect-info sector-12">
 
-					<h2 class="head-top">3D Enthusiast</h2>
-					<div class="divider"></div>
-					</br>
-					</br>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis justo, finibus ultrices elit et, interdum congue mi. Aliquam suscipit finibus ipsum eu scelerisque. Phasellus vehicula dapibus finibus. Nullam bibendum velit quis velit vulputate, vel vestibulum nulla ullamcorper. Maecenas dui erat, malesuada a purus ac, ultrices semper orci. Cras nec bibendum lectus. Sed semper nisl vitae fermentum molestie. Nunc euismod efficitur nisi, ut congue tellus sagittis eget. Maecenas rhoncus tristique convallis. Quisque hendrerit magna eget eros elementum malesuada.</p>
+					</br>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis justo, finibus ultrices elit et, interdum congue mi. Aliquam suscipit finibus ipsum eu scelerisque. Phasellus vehicula dapibus finibus. Nullam bibendum velit quis velit vulputate, vel vestibulum nulla ullamcorper. Maecenas dui erat, malesuada a purus ac, ultrices semper orci. Cras nec bibendum lectus. Sed semper nisl vitae fermentum molestie. Nunc euismod efficitur nisi, ut congue tellus sagittis eget. Maecenas rhoncus tristique convallis. Quisque hendrerit magna eget eros elementum malesuada.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce felis justo, finibus ultrices elit et, interdum congue mi. Aliquam suscipit finibus ipsum eu scelerisque. Phasellus vehicula dapibus finibus. Nullam bibendum velit quis velit vulputate, vel vestibulum nulla ullamcorper. Maecenas dui erat, malesuada a purus ac, ultrices semper orci. Cras nec bibendum lectus. Sed semper nisl vitae fermentum molestie. Nunc euismod efficitur nisi, ut congue tellus sagittis eget. Maecenas rhoncus tristique convallis. Quisque hendrerit magna eget eros elementum malesuada.</p>
 
-				</div>
-
-				<div class="sect sector-5">
-					<div class="character">
-						<img src="img/3d.png" alt="3d" />
-					</div>
 				</div>
 			</div>
 		</section>
