--- a/blog.html
+++ b/blog.html
@@ -63,7 +63,7 @@
 			</div>
 		</section>
 
-		<div class="clearfloat"></div>
+		<!-- <div class="clearfloat"></div>
 
 		<section class="skill">
 			<div class="con no-skew">
@@ -102,11 +102,11 @@
 					</div>
 				</div>
 			</div>
-		</section>
+		</section> -->
 		<div class="clearfloat"></div>
 		<section class="blog">
 			<div class="con">
-				<h2 class="blog-main-header">Yeh! I Write Too</h2>
+				<h2 class="blog-main-header">Other Posts</h2>
 				<div class="divider divider-middle"></div>
 				<div class="sector-4">
 					<a href="#" class="blog-link">
