--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@
 				<h2 class="blog-main-header">Yeh! I Write Too</h2>
 				<div class="divider divider-middle"></div>
 				<div class="sector-4">
-					<a href="#" class="blog-link">
+					<a href="blog.html" class="blog-link">
 						<div class="single-blog">
 							<img src="img/travel.jpeg" alt="" />
 							<div class="blog-info">
@@ -140,7 +140,7 @@
 					</a>
 				</div>
 				<div class="sector-4">
-					<a href="#">
+					<a href="blog.html">
 						<div class="single-blog">
 							<img src="img/startup.jpg" alt="" />
 							<div class="blog-img-cover"></div>
@@ -157,7 +157,7 @@
 					</a>
 				</div>
 				<div class="sector-4">
-					<a href="#">
+					<a href="blog.html">
 						<div class="single-blog">
 							<img src="img/startup.jpg" alt="" />
 							<div class="blog-img-cover"></div>
